# Group24-8307

./: .gitignore  PROMPTS.md  QUICKSTART.md  README.md  TEACHING_PROMPT.md  render.yaml
backend/: .env.production.example  Dockerfile  pyproject.toml  run_ingest.py  test_audit_flow.py  tmp_ingest.json  tmp_test_report.md  verify_ingest.py
backend/app/: config.py  main.py  security.py
backend/app/auth/: __init__.py  core.py  deps.py
backend/app/monitor/: __init__.py  agent.py
backend/app/routes/: audit.py  auth_routes.py  history.py  monitor.py  rules.py  upload.py  ws.py
backend/app/tasks/: __init__.py  queue.py
backend/app/tracing/: __init__.py  events.py  hooks.py  store.py
backend/config/: default.yaml  dimensions.yaml  mock.yaml  standards_versions.yaml
backend/src/: __init__.py  cli.py  config.py
backend/src/agents/: __init__.py  audit_judgment.py  base.py  llm_audit_utils.py  standards_seed.py  vision_prompts.py
backend/src/chunk/: __init__.py  image_chunk.py  models.py  text_chunk.py
backend/src/harness/: __init__.py
backend/src/llm/: __init__.py  api_provider.py  factory.py  mock_provider.py  provider.py
backend/src/metrics/: __init__.py  compute.py
backend/src/output/: __init__.py  annotator.py  contest_formatter.py  json_writer.py
backend/src/parse/: __init__.py  doc_converter.py  docx_parser.py  mineru_parser.py  pdf_parser.py  scan_detector.py
backend/src/pipeline/: __init__.py  audit.py  (+3 more)
backend/tests/: test_auth_cookies.py  test_c1_structure.py  test_e1_e2_agents.py  test_scene2_image_support.py  test_scene2_task_defaults.py
(+118 files in other folders)
