[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industry-demo-backend"
version = "0.1.0"
description = "Industrial AI document review demo — FastAPI backend + audit engine"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "httpx>=0.27",
    # Auth
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    # Audit engine — document parsing
    "python-docx>=1.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "mineru[pipeline]>=3.1.6",
    "chromadb>=0.5.0",
    # Audit engine — NLP / utilities
    "pyyaml>=6.0",
    "jieba>=0.42.1",
    "lxml>=5.0",
    "langgraph>=0.2.0",
    "aiosqlite>=0.20",
    "mammoth>=1.6.0",
    "ddgs>=0.1",
    "sentence-transformers>=3.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.7.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
# Windows 开发机调用本地 Word 转换 .doc：pip install -e ".[win]"
win = ["pywin32>=306"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
